@@ -1,4 +1,3 @@
-LoadingMessage = The Flash Player browser plug-in is taking some time to load...<br><br>If not installed, please visit <a href="http://www.adobe.com/go/getflashplayer" target="blank_">http://www.adobe.com/go/getflashplayer</a><br><br>On Linux, after installation, you may have to run a command like:<br>sudo ln -s -t /usr/lib/xulrunner/libflashplayer.so /usr/lib/mozilla/plugins/libflashplayer.so
 PlayIcon = resource/nav_go.gif
 PlayText = Play
 PauseIcon = resource/suspend_co.gif
