@@ -1,4 +1,3 @@
-LoadingMessage = The VLC Player browser plug-in is taking some time to load...<br><br>If not installed, please visit <a href="http://www.videolan.org" target="blank_">http://www.videolan.org</a><br><br>On Linux, after installation, you may have to run a command like:<br>sudo ln -s -t /usr/lib/xulrunner/plugins /usr/lib/mozilla/plugins/libvlcplugin.so
 PlayIcon = resource/nav_go.gif
 PlayText = Play
 PauseIcon = resource/suspend_co.gif
